--- a/makefile.depend
+++ b/makefile.depend
@@ -13,7 +13,7 @@ OBJ_FILES =  \
 constants_mod.o:
 diagnostics_mod.o: extrema_mod.o grids_mod.o input_mod.o
 extrema_mod.o: input_mod.o geometry_mod.o grids_mod.o
-find_bounce_point.o: geometry_mod.o constants_mod.o input_mod.o
+find_bounce_point.o: geometry_mod.o constants_mod.o input_mod.o splines_mod.o
 flintegrate_mod.o: splines_mod.o geometry_mod.o constants_mod.o
 geometry_mod.o: input_mod.o constants_mod.o
 grids_mod.o: input_mod.o
